name: crdt-test
version: 0
build-type: Simple
cabal-version: >= 1.10

flag Cm
    description: Include commutative types
    default: True

library
    hs-source-dirs: lib
    build-depends:  base
                  , crdt
                  , QuickCheck
                  , quickcheck-instances
    exposed-modules:  CRDT.Arbitrary
                      CRDT.Arbitrary.Common
    if flag(Cm)
        cpp-options: -DENABLE_CM=1
        exposed-modules:  CRDT.Arbitrary.Cm
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends:  base
                  , containers
                  , crdt
                  , crdt-test
                  , mtl
                  , QuickCheck
                  , QuickCheck-GenT
                  , quickcheck-instances
                  , tasty
                  , tasty-discover >=4.1
                  , tasty-quickcheck
    other-modules:  Cm.ORSet
                    Cm.RGA
                    Cm.TwoPSet
                    Counter
                    Cv.ORSet
                    Cv.RGA
                    Cv.TwoPSet
                    GCounter
                    GSet
                    Laws
                    LWW
                    LwwElementSet
                    Max
                    PNCounter
                    Util
    if impl(ghc < 8)
        buildable: False
    default-language: Haskell2010
